--- a/components/RadioGroup/RadioGroup.module.scss
+++ b/components/RadioGroup/RadioGroup.module.scss
@@ -10,7 +10,7 @@
   .itemLabel {
     display: flex;
     align-items: center;
-    gap: var(--space-3);
+    gap: var(--space-2);
     cursor: pointer;
     position: relative;
     padding: var(--space-3) var(--space-4);
