--- a/components/Table/FilterBuilder/FilterGroup.module.scss
+++ b/components/Table/FilterBuilder/FilterGroup.module.scss
@@ -92,7 +92,7 @@
     overflow: hidden;
     display: flex;
     flex-direction: column;
-    gap: var(--space-4);
+    gap: var(--space-3);
 
     @include mq("sm", "max") {
       gap: var(--space-2);
@@ -166,7 +166,7 @@
       )
       minmax(var(--width-control-sm), 1fr) auto;
     align-items: center;
-    gap: var(--space-4);
+    gap: var(--space-3);
     padding: var(--space-2);
     background: var(--surface-accent);
     transition: all var(--duration-fast) var(--ease-in-out);
