--- a/components/Textarea/Textarea.module.scss
+++ b/components/Textarea/Textarea.module.scss
@@ -59,7 +59,7 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    gap: var(--space-4);
+    gap: var(--space-3);
   }
 
   .messageArea {
